Integrates the "properties panel" in the dom layout

--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -43,6 +43,14 @@ body {
   overflow: hidden;
 }
 
+#prkred-right {
+  position: absolute;
+  top: 120px;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+}
+
 /*#prkred-toolbox {
   color: #fff;
   background-color: #444;
