Hides the properties panel when there are no properties to display

--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -76,6 +76,10 @@ body {
   justify-content: space-between;
 }
 
+#propertiesPanelRoot.empty {
+  display: none;
+}
+
 .prkr-props-head {
   /* Streched row */
   display: flex;
