Adds a status bar to the editor (first draft)
New `bottom` container in the editor's `domLayout`.
New `setStatus` method on `ParcourEditor`.
First (temporary) status message from the _select-tool_.

--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -67,6 +67,23 @@ body {
   background: rgba(255, 255, 255, 0.5);  
 }
 
+#prkred-bottom {
+  position: absolute;
+  bottom: 0;
+  overflow: hidden;
+}
+
+#statusBar {
+  padding: 4px;
+
+  background: transparent;
+  color: black;
+  text-shadow: 0px 0px 3.5px white;
+
+  user-select: none;
+  cursor: default;
+}
+
 #propertiesPanelRoot {
   /* column */
   display: flex;
