--- a/src/css/site.css
+++ b/src/css/site.css
@@ -17,6 +17,10 @@
   font-weight: 700;
 }
 
+.accent-color {
+  color: orangered;
+}
+
 body {
   font-family: Roboto, sans-serif;
   margin: 0;
@@ -93,7 +97,12 @@ button:hover {
 }
 
 .prkr-item-name {
+  display: inline-block;  
   font-weight: 700;
+}
+
+.prkr-item-user {
+  display: inline-block;
 }
 
 .prkr-item-lastupdate {
