--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -16,6 +16,18 @@ body {
 .padding { padding: 4px; }
 .margin { margin: 4px; }
 
+.keyboard-shortcut {
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 0, 0.333);
+  text-shadow: none;
+  padding: 1px 4px;
+  margin: 0 8px;
+  font-family: monospace;
+  font-size: 11px;
+  font-weight: 700;
+  line-height: 14px;
+}
+
 #prkred-top {
   position: absolute;
   top: 0;
