--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -40,17 +40,22 @@ body {
   background-color: #444;
 }
 
-/*#prkred-left {
+#prkred-left {
   position: absolute;
   top: 120px;
-  left: 0px;
-  width: 80px;
+  left: 0;
   bottom: 0;
   overflow: hidden;
 
-  color: #fff;
-  background-color: #444;
-}*/
+  /* column */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: stretch;
+  justify-content: flex-start;
+  
+  background: rgba(255, 255, 255, 0.5);  
+}
 
 #prkred-main {
   position: absolute;
@@ -188,6 +193,33 @@ body {
 .prkr-proped.prkr-proped-range .prkr-proped-field input {
   width: 100%;
 }
+
+/* *** Select property editor *** */
+/* --- layout --- */
+.prkr-proped-select .prkr-proped-field {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+
+}
+
+.prkr-proped-select .prkr-proped-field .prkr-option {
+  border: none;
+
+  padding: 8px;
+}
+
+
+/* --- colors --- */
+
+.prkr-proped-select .prkr-proped-field .prkr-option {
+  background-color: darkgrey;
+}
+
+.prkr-proped-select .prkr-proped-field .prkr-option.active {
+  background-color: lightgray;
+}
+
 
 
 /*#prkred-toolbox {
