--- a/src/css/player.css
+++ b/src/css/player.css
@@ -2,6 +2,14 @@ body {
   font-family: "Roboto";
 }
 
+* {
+  box-sizing: border-box;
+}
+
+.hidden {
+  display: none;
+}
+
 #prpl-main {
   position: absolute;
   left: 0;
@@ -47,6 +55,57 @@ body {
   max-width: 600px;
 
   text-align: right;
+}
+
+#prpl-menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+
+  padding: 10px;
+  
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  text-shadow: 0 0 4px black, 0 0 1.69em black;
+}
+
+#prpl-menu .menu-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+  width: 60px;
+  height: 60px;
+
+  padding: 0px;
+
+  font-size: 50px;
+  text-align: center;
+
+  border-radius: 50%;
+
+  background-color: #fff;
+  color: #000;
+}
+
+#prpl-menu .menu-title {
+  font-size: 80px;
+  margin-top: 200px;
+}
+
+#prpl-menu .menu-section {
+  margin-top: 20px;
+}
+
+#prpl-menu .menu-option {
+  margin-top: 14px;
+}
+
+#prpl-menu .menu-section-title {
+  font-size: 36px;
 }
 
 .number {
