--- a/src/css/player.css
+++ b/src/css/player.css
@@ -6,10 +6,6 @@ body {
   box-sizing: border-box;
 }
 
-.hidden {
-  display: none;
-}
-
 #prpl-main {
   position: absolute;
   left: 0;
@@ -28,7 +24,7 @@ body {
   overflow: hidden;
 
   display: none;
-  
+
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0 0 4px black, 0 0 1.69em black;
@@ -65,35 +61,47 @@ body {
   bottom: 0;
   overflow: hidden;
 
-  padding: 10px;
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0 0 4px black, 0 0 1.69em black;
+
+  opacity: 1;
+  transition: opacity 125ms ease-in;
+}
+
+#prpl-menu.hidden {
+  opacity: 0;
 }
 
 #prpl-menu .menu-close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-
-  width: 60px;
-  height: 60px;
-
-  padding: 0px;
-
+  align-self: flex-end;
   font-size: 50px;
-  text-align: center;
+  cursor: pointer;
+}
 
-  border-radius: 50%;
+#prpl-menu .menu-close:hover {
+  color: rgba(255, 255, 255, 0.5);
+}
 
-  background-color: #fff;
-  color: #000;
+#prpl-menu .menu-content {
+  display: flex;
+  flex-direction: column;
+
+  min-width: 300px;
+  max-width: 800px;
+  height: 100%;
+  padding: 10px;
+
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 #prpl-menu .menu-title {
   font-size: 80px;
-  margin-top: 200px;
+  margin-top: 175px;
 }
 
 #prpl-menu .menu-section {
@@ -106,6 +114,7 @@ body {
 
 #prpl-menu .menu-section-title {
   font-size: 36px;
+  color: rgba(255, 255, 255, 0.75);
 }
 
 .number {
